[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"


[project]
name = "cylinder"
dynamic = ["version"]
description = "A web application framework and webserver based on Flask and Waitress"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["flask", "waitress"]

[[project.authors]]
name = "Chris Wheeler"
email = "cwheeler@tier2.tech"

[[project.maintainers]]
name = "Nicholas Gray"
email = "nicholas@tier2.tech"

[project.urls]
Homepage = "https://github.com/plasmacan/cylinder"

[tool.setuptools]
py-modules = ["cylinder"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cylinder.__version__"}

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["cylinder"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*.html",
    "*.txt"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]