[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"


[project]
name = "cylinder"
dynamic = ["version"]
description = "A web application micro framework based werkzeug"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["werkzeug"]

[[project.authors]]
name = "Chris Wheeler"
email = "cwheeler@tier2.tech"

[[project.maintainers]]
name = "Nicholas Gray"
email = "nicholas@tier2.tech"

[project.urls]
Homepage = "https://github.com/plasmacan/cylinder"

[tool.setuptools]
py-modules = ["cylinder"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cylinder.__version__"}

[tool.ruff]
target-version = "py313"
line-length = 107 # 107 is the Github diff-view line-wrap limit on a 1080 monitor at 1x zoom
exclude = [
    "tests/*",
    "test_sites/*",
	".ci-tools/*"
]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "A",                # redefined builtins
    "C90",              # mccabe / too-complex
    "PLE", "PLW", "PLR",# pylint error / warning / refactor
    "COM818",           # trailing-comma-tuple equivalent
    "B006", "B015", "B018",  # dangerous-default-value / pointless-statement-ish
]
ignore = [
    "E203",    # keep formatter-compatible whitespace behavior
    "E402",    # flake8 ignored this
    "E501",    # line too long handled by formatter
    "F401",    # flake8 ignored unused imports

    "PLR0911", # too-many-return-statements
    "PLR0913", # too-many-arguments
    "PLR1714", # consider-using-in
    "PLR1716", # chained-comparison
    "PLW1510", # subprocess-run-check
]
dummy-variable-rgx = "_$|dummy"
task-tags = ["FIXME", "XXX", "TODO"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 5
max-positional-args = 5
max-locals = 30
max-returns = 6
max-branches = 20
max-statements = 70
max-public-methods = 20
max-bool-expr = 5
max-nested-blocks = 5

[tool.ruff.lint.isort]
known-first-party = ["cylinder"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*.html",
    "*.txt"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
